testdata/baselines/reference/submodule/conformance/nestedDestructuringOfRequire.errors.txt
main.js(5,1): error TS2304: Cannot find name 'chalk'.
mod1.js(4,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== main.js (1 errors) ====
    const {
        chalk: { grey }
    } = require('./mod1');
    grey
    chalk
    ~~~~~
!!! error TS2304: Cannot find name 'chalk'.
    
==== mod1.js (1 errors) ====
    const chalk = {
        grey: {}
    };
    module.exports.chalk = chalk
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    